[package]
name = "arrayy"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/ManiGhazaee/arrayy"
authors = ["ManiGhazaee <hosseinghazaee1@gmail.com>"]
description = "Stack-allocated fixed-size array with useful methods on top of Rust's [T; L] type."
readme = "README.md"
license = "MIT"
keywords = ["array", "data-structure"]

[dependencies]
